force-app/main/default/objects/laptop__c/laptop__c.object-meta.xml
<CustomObject>
    <label>laptop</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>laptops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>