force-app/main/default/objects/laptop__c/fields/Operating_system__c.field-meta.xml
<CustomField>
    <fullName>Operating_system__c</fullName>
    <label>Operating system</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>windows</fullName>
            </value>
            <value>
                <fullName>windows second</fullName>
            </value>
            <value>
                <fullName>mac</fullName>
            </value>
            <value>
                <fullName>mac second</fullName>
            </value>
            <value>
                <fullName>linux</fullName>
            </value>
            <value>
                <fullName>linux second</fullName>
            </value>
            <value>
                <fullName>windows reloaded</fullName>
            </value>
            <value>
                <fullName>mac reloaded</fullName>
            </value>
            <value>
                <fullName>linux reloaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>