force-app/main/default/objects/laptop__c/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <label>RAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4GB</fullName>
            </value>
            <value>
                <fullName>8GB</fullName>
            </value>
            <value>
                <fullName>12GB</fullName>
            </value>
            <value>
                <fullName>16GB</fullName>
            </value>
            <value>
                <fullName>4GB second</fullName>
            </value>
            <value>
                <fullName>8GB second</fullName>
            </value>
            <value>
                <fullName>12GB second</fullName>
            </value>
            <value>
                <fullName>16GB second</fullName>
            </value>
            <value>
                <fullName>4GB reloaded</fullName>
            </value>
            <value>
                <fullName>8Gb reloaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>