force-app/main/default/objects/laptop__c/fields/screen_size__c.field-meta.xml
<CustomField>
    <fullName>screen_size__c</fullName>
    <label>screen size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>