force-app/main/default/objects/laptop__c/recordTypes/first.recordType-meta.xml
<RecordType>
    <fullName>first</fullName>
    <active>true</active>
    <label>first</label>
</RecordType>