force-app/main/default/objects/laptop__c/recordTypes/second.recordType-meta.xml
<RecordType>
    <fullName>second</fullName>
    <active>true</active>
    <label>second</label>
</RecordType>